reworked the UX a bit so it is not as annoying and put in the jquery ui rails gem with several helpers to make the view process a little less anonying on the eyes

--- a/app/views/bids/partials/_new.html.erb
+++ b/app/views/bids/partials/_new.html.erb
@@ -21,8 +21,7 @@
 			<% end # each mini %>
 			<%= text_field_tag "location[country]", "", :placeholder => t(:country, :scope => [:views, :bids, :forms, :placeholders] ) %>
 		</div>
-		<%= content_tag(:button, t(:submit, :scope => [:views, :bids, :forms, :labels]), :class => "btn btn-success", :type => "submit" ) %>	
-		<%= content_tag(:button, t(:cancel, :scope => [:views, :bids, :forms, :labels]), :class => "btn", :id => "close-bid-button" ) %>
+		<%= form_action_tag( :bid ) %>
 	</fieldset>
 <% end %>
 
