--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
 					<% end %>
 					</div>
 					<div class="form-actions">
-						<button type="submit" class="btn btn-primary"><%= t(:submit, :scope => [:views,:users,:forms,:labels]) %></button>
+						<%= form_action_tag(:user) %>
 					</div>
 				</fieldset>
 			<% end %>  
