--- a/app/views/locations/partials/_new.html.erb
+++ b/app/views/locations/partials/_new.html.erb
@@ -2,21 +2,22 @@
 <%= form_for [parent, @location], :method => method, :remote => remote, :class => "well" do |f| %>
 	<fieldset>
   	<legend><%= t(:edit_location, :scope => [:views, :locations, :forms, :new]) %></legend>
+  	<div class="control-group">
   	<% {:shipping => "mini", :address => "large", :city => "small", :state => "mini inline", :zip => "mini inline", :country => "mini inline" }.each do |field, style| %>
-			<div class="control-group">
-				<%= f.label t(field, :scope => [:views, :locations, :forms, :labels]), :class => "control-label" %>
-				<% case field %>
-					<% when :phone %>
-						<%= f.email_field field, :class => "input" + style %>
-					<% when :company %>
-						<%= f.phone_field field, :class => "input" + style %>
-					<% when :shipping %>
-					<%= f.select( field, options_for_select( ['exworks','fas','fob','cnf','cif'].map { |x| [x.upcase, x.upcase] } ), :class => "input" + style ) %>
-					<% else %>
-						<%= f.text_field field, :class => "input" + style %>
-				<% end %>
-			</div>
+		
+			<%= f.label t(field, :scope => [:views, :locations, :forms, :labels]), :class => "control-label" %>
+			<% case field %>
+				<% when :phone %>
+					<%= f.email_field field, :class => "input" + style %>
+				<% when :company %>
+					<%= f.phone_field field, :class => "input" + style %>
+				<% when :shipping %>
+				<%= f.select( field, options_for_select( ['exworks','fas','fob','cnf','cif'].map { |x| [x.upcase, x.upcase] } ), :class => "input" + style ) %>
+				<% else %>
+					<%= f.text_field field, :class => "input" + style %>
+			<% end %>
 		<% end %>
-		<button type="submit" class="btn btn-primary"><%= t(:submit, :scope => [:views, :locations, :forms, :labels]) %></button>
+		</div>
+		<%= form_action_tag(:location) %>
   </fieldset>
 <% end # form_tag  %>
