--- a/app/views/users/partials/_login.html.erb
+++ b/app/views/users/partials/_login.html.erb
@@ -10,6 +10,6 @@
 			<%= label_tag "user_remember_me", t(:remember_me, :scope => [:views,:users,:forms,:labels]), :class => "control-label" %>
 			<%= check_box_tag "user[remember_me]" %>
 		</div>
-		<%= content_tag(:button, t(:login_user, :scope => [:views,:users,:forms,:labels]), :class => "btn btn-primary" ) %>
+		<%= form_action_tag(:login) %>
   </fieldset>
 <% end %>  
