setup a pretty smexy front page, we could probably put some links in there in addition to pop-ups, but for now this will do

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,9 @@
 @import "bootstrap";
 @import "bootstrap-responsive";
 
+img.logoicon { 
+	width : 150px;
+	height : 30px;
+	margin-top : -8px;
+}
 
