--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,7 +13,7 @@
 						</li>
 					<% end %>
 					<li class="active">
-						<%= image_tag("http://placehold.it/45x30") %>
+						<%= image_tag("http://i299.photobucket.com/albums/mm281/foxnewsnetwork/minilogo.png") %>
 					</li>
 				</ul>
 			</div>
