--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,7 +4,9 @@
 			<div class="subnav">		
 				<ul class="nav nav-pills">
 					<li>
-						<%= link_to( image_tag("http://placehold.it/150x30") , root_path) %>
+						<%= link_to(root_path) do %>
+							<%= image_tag("http://i299.photobucket.com/albums/mm281/foxnewsnetwork/logo2.png", :class => "logoicon") %>
+						<% end # logo link %>
 					</li>
 					<% { "shopping-cart" => :buy, "gift" => :sell }.each do |icon, tab| %>
 						<li>
