worked out this ridiculous categorization feature ui and the database in items, a bit mroe work is necessary before full functionality

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,18 @@
 <!-- item index page -->
 <div class="container-fluid">
 	<div class="row-fluid">
-	<%= render "items/partials/index" %> 
+		<!-- item search section -->
+		<div class="span12 well">
+			<%= form_tag items_path, :class => "form-inline", :method => "get", :remote => true, :id => "item_search_form" do %>
+				<%= select_tag "category", options_for_select(@categories), :id => "item_search_category" %>
+				<%= select_tag "type", options_for_select(@types), :id => "item_search_type" %>
+				<%= ajax_submit_tag("item_search_form", :class => "btn btn-info") do %>
+					<%= content_tag(:i, "", :class => "icon-search icon-white") %>
+				<% end # button %>
+			<% end %>
+		</div>
+	</div>
+	<div class="row-fluid" id="page-index-container-nigger">
+		<%= render "items/partials/index" %> 
 	</div>
 </div>
