--- a/app/views/items/index.js.erb
+++ b/app/views/items/index.js.erb
@@ -1,9 +1,2 @@
-$("#page-index-container").ready( function() {
-	clearInterval(timer);
-	$("#now-loading-bar").css("width", "100%"); 
-	$("#now-loading").hide( 1000, function() { 
-		$("#page-index-container").show();
-	} ); // hide loading
-} ); // document.ready
-
-$("#page-index-container").html('<%= escape_javascript(render "items/partials/index") %>');
+$("#page-index-container-nigger").html('');
+$("#page-index-container-nigger").html('<%= escape_javascript(render "items/partials/index") %>');
