--- a/app/views/items/partials/_index.html.erb
+++ b/app/views/items/partials/_index.html.erb
@@ -5,7 +5,7 @@
 			<h4><i class="icon-tags" ></i> <%= t( :new_items, :scope => [:views, :items, :forms, :index] ) %></h4>
 		</div>
 	</div>
-	</div class="span12-fluid">
+	<div class="span12-fluid">
 		<ul class="thumbnails">
 			<% @items.each do |item| %>
 				<li class="span3">
