worked out admin categorization so that we can now added additional categories and whatnot to items without having to do it from shell

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,6 +12,9 @@
 							<%= link_to tag, "#" %> <span class="divider">/</span>
 						</li>
 					<% end %>
+					<% if user_signed_in? && current_user.admin %>
+						<li><%= link_to "admin", "/admin" %></li>
+					<% end %>
 					<li class="active">
 						<%= image_tag("http://i299.photobucket.com/albums/mm281/foxnewsnetwork/minilogo.png") %>
 					</li>
