--- a/app/views/items/partials/_edit.html.erb
+++ b/app/views/items/partials/_edit.html.erb
@@ -5,7 +5,7 @@
 		<div class="control-group">
 			<% [:title, :description, :material].each do |tag| %>
 				<%= f.label t(tag, :scope => [:views, :items, :forms, :labels]), :class => "control-label" %>
-				<%= f.text_field tag, :value => "", :placeholder => t(tag, :scope => [:views, :items, :forms, :placeholders]) %>
+				<%= f.text_field tag, :placeholder => t(tag, :scope => [:views, :items, :forms, :placeholders]) %>
 			<% end %>
 			<%= f.label t(:category, :scope => [:views, :items, :forms, :labels]), :class => "control-label" %>
 			<%= f.select :category, "" %>
