--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-<%= render "shared/header" %>
+<div id="header-container">
+	<%= render "shared/header" %>
+</div>
 <div id="flash-container">
 	<%= render "shared/flash", :flash => flash %>
 </div>
